# HiGit

./: .gitignore  README.md  build-profile.json5  license.html
AppScope/: app.json5
AppScope/resources/base/element/: string.json
design/: README.md  arkts-ui-summary.md  commits.html  index.html  repo.html
entry/: .gitignore  build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  CMakePresets.json  build.ninja  napi_init.cpp
entry/src/main/cpp/include/: core.h  global.h  repo_manager.h  ssh_manager.h
entry/src/main/cpp/src/: core.cpp  global.cpp  handler.cpp  repo_manager.cpp  ssh_manager.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/utils/: messages.hpp  raw.hpp  utils.hpp
entry/src/main/ets/data/: Commit.ets  File.ets  RepoItem.ets  Result.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: CommitHistory.ets  Files.ets  Index.ets  RepoDetail.ets  Safe.ets
entry/src/main/ets/services/: AppService.ets  GitService.ets
entry/src/main/ets/utils/: AvPlayerUtil.ets  BasicDataSource.ets  Logger.ets  PipWindowUtil.ets  ToastHook.ets  Utils.ets  WindowUtil.ets
entry/src/main/ets/viewModel/: CommitHistoryViewModel.ets  IndexViewModel.ets  RepoDetailViewModel.ets
entry/src/main/ets/views/: About.ets  BaseViewModel.ets  CommitDetail.ets  CommitItemVIew.ets  CreateRepo.ets  FileDetail.ets  Help.ets  PopupLoading.ets  RepoItemView.ets  Settings.ets
entry/src/main/resources/base/element/: color.json  float.json  string.json
entry/src/main/resources/base/profile/: main_pages.json  route_map.json
test/: test.md
test/subfolder/: test.md
